# sheetsight-py

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
examples/: basic_usage.py  env.example
sheetsight_py/: __init__.py  client.py  exceptions.py  types.py
tests/: test_client.py
